working on cloudinary

--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@
 PGHOST='ep-broad-paper-94107233.ap-southeast-1.aws.neon.tech'
 PGDATABASE='neondb'
 PGUSER='Orsiris'
-PGPASSWORD='<% PASSWORD %>'
+PGPASSWORD='H8EL9mlwRYiI'
 ENDPOINT_ID='ep-broad-paper-94107233'
 
 CLOUDINARY_CLOUD_NAME=dkswfvrfr
